# AutoChangelog

./: pyproject.toml
.github/workflows/: build.yaml
src/autochangelog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/releasenotes/: generator.py
